--- a/styles/add_tasks_mediaQuery.css
+++ b/styles/add_tasks_mediaQuery.css
@@ -322,6 +322,10 @@
     padding: 10px 21px;
   }
 
+  .underList, .list, .underListContact, .listContact, .contactList{
+    position: relative;
+  }
+
   .searchContacts {
     width: 300x;
     font-size: 20px;
@@ -509,6 +513,11 @@
     width: 300x;
   }
 
+
+  .underList, .list, .underListContact, .listContact, .contactList{
+    position: relative;
+  }
+
   .custom-checkbox {
     width: 100%;
     gap: 150px;
@@ -667,7 +676,9 @@
 
   .underListContact {
     width: 780px;
+   
   }
+ 
   
 
   .categoryFrame74{
