--- a/styles/contacts.css
+++ b/styles/contacts.css
@@ -157,6 +157,9 @@ hr{
     border: solid;
     margin-left: 60px;
     box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 .contact-info{
     cursor: pointer;
