--- a/styles/board.css
+++ b/styles/board.css
@@ -244,9 +244,9 @@
   background: var(--white, #fff);
   box-shadow: 0px 0px 10px 3px rgba(0, 0, 0, 0.08);
 }
-.cardA:hover {
+/* .cardA:hover {
   transform: rotate(10deg);
-}
+} */
 
 .taskText {
   width: 100%;
@@ -295,13 +295,46 @@
 .smallPrio {
   width: 124px;
 }
+/* .smallProgress {
+ color: #000;
+  font-family: Inter;
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 120%;
+} */
+
+/* progress bar */
+.progress {
+  background: rgb(18 17 17 / 10%);
+  justify-content: flex-start;
+  border-radius: 100px;
+  align-items: center;
+  position: relative;
+  padding: 0 5px;
+  display: flex;
+  /* height: 40px; */
+  width: 77%;
+}
+
+.progress-value {
+  animation: load 3s normal forwards;
+  box-shadow: 0 10px 40px -10px #080808;
+  border-radius: 100px;
+  background: #444444;
+  height: 10px;
+  width: 50%;
+}
+
+
+
 .popUpWindow {
   position: fixed;
   inset: 0;
   display: flex;
   align-items: center;
   justify-content: center;
-  background: #8080808f;
+  background: hsla(0, 0%, 50%, 0.561);
   z-index: 999;
   transform: translateX(400%);
   transition: 550ms ease-in-out;
