--- a/styles/board.css
+++ b/styles/board.css
@@ -354,6 +354,25 @@
   box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.16);
   justify-content: space-between;
 }
+
+.largesCard{
+  width: 100%;
+}
+.edit {
+  height: 80%;
+  width: 400px;
+  border: solid;
+  display: flex;
+  width: 525px;
+  padding: 48px 40px;
+  flex-direction: column;
+  align-items: flex-end;
+  gap: 24px;
+  border-radius: 30px;
+  background: #fff;
+  box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.16);
+  justify-content: space-between;
+}
 .largeCardInside {
   width: 100%;
     display: flex;
