--- a/styles/board.css
+++ b/styles/board.css
@@ -435,7 +435,11 @@ align-items: center;
    align-items: center;
    justify-content: center;
 }
-
+.boardLargContactsAvatar {
+  display: flex;
+    align-items: center;
+    gap: 16px;
+}
 .largCartSubtasks {
   color: var(--Version-2-main-color, #2A3647);
     font-family: Inter;
