--- a/styles/board.css
+++ b/styles/board.css
@@ -502,7 +502,7 @@ align-items: center;
   align-items: center;
 
 }
-.closeLargeCardButton{
+.closeLargeEditCardButton{
   width: 85%;
   display: flex;
   justify-content: end;
