--- a/styles/add_tasks_mediaQuery.css
+++ b/styles/add_tasks_mediaQuery.css
@@ -817,4 +817,14 @@
   .box-sizingResponsiv{
     display: none;
   }
+
+  .textContainer_addTask {
+    margin-top: 0px;
+    margin-left: 290px;
+  }
+  .contentTask {
+    overflow: scroll !important;
+    max-height: 660px !important;
+    margin-top: 68px; 
+  }
 }
