--- a/styles/add_tasks_mediaQuery.css
+++ b/styles/add_tasks_mediaQuery.css
@@ -677,9 +677,7 @@
   .underListContact {
     width: 780px;
    
-  }
- 
-  
+  }  
 
   .categoryFrame74{
     width: 748px;
@@ -742,7 +740,7 @@
   }
 }
 
-@media (min-width: 1150px) and (max-width: 1200px) {
+@media (min-width: 1150px) and (max-width: 1399px) {
 
   .box-sizingResponsiv{
     display: none;
@@ -813,18 +811,22 @@
   }
 }
 
-@media (min-width: 1201px){
+@media (min-width: 1400px){
   .box-sizingResponsiv{
     display: none;
   }
+
 
   .textContainer_addTask {
     margin-top: 0px;
     margin-left: 290px;
   }
   .contentTask {
-    overflow: scroll !important;
-    max-height: 660px !important;
-    margin-top: 68px; 
+    padding-top: 40px; 
+      max-height: 700px !important;
+      overflow: scroll !important;
+   
   }
-}
+  }
+
+  
