--- a/styles/board.css
+++ b/styles/board.css
@@ -507,6 +507,93 @@ align-items: center;
   display: flex;
   justify-content: end;
 }
+
+
+
+
+/* addTaskEdit */
+.frame17Borad {
+  position: relative;
+  height: 120px;
+  flex: 1;
+  display:flex;
+  box-sizing: border-box;
+  font-family: "Inter", sans-serif;
+  width: 440px;
+  border-radius: 10px;
+}
+.categoryFrame74Board{
+  z-index: 6;
+  cursor: pointer;
+  display: flex;
+  padding: 12px 16px;
+  justify-content: space-between;
+  position: relative;
+  border-radius: 10px;
+  border: 1px solid var(--Style, #D1D1D1);
+  background: var(--white, #FFF);
+  color: var(--black, #000);
+  font-family: "Inter", sans-serif;
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 24px;
+  outline: none;
+  width: 410px;
+  margin-top: 8px;
+}
+.frame203Board {
+  display: flex;
+    flex-direction: column;
+    height: 64px;
+    border: 1px;
+    gap: 4px;
+    width: 440px;
+}
+.title_frame14Board{
+  cursor: pointer;
+    display: flex;
+    padding: 12px 21px;
+    align-items: center;
+    gap: 10px;
+    align-self: stretch;
+    border-radius: 10px;
+    border: 1px solid var(--Style, #D1D1D1);
+    background: #FFF;
+    margin-top: 8px;
+} 
+.subtasksFrame14Board {
+  cursor: pointer;
+  display: flex;
+  padding: 12px 16px;
+  justify-content: space-between;
+  align-items: center;
+  align-self: stretch;
+  border-radius: 10px;
+  border: 1px solid var(--Style, #D1D1D1);
+  background: #FFF;    cursor: pointer;
+  display: flex;
+  padding: 12px 16px;
+  justify-content: space-between;
+  align-items: center;
+  align-self: stretch;
+  border-radius: 10px;
+  border: 1px solid var(--Style, #D1D1D1);
+  background: #FFF;
+}
+.subtaskItemBoard{
+  cursor: pointer;
+    display: flex;
+    width: 410px;
+    height: 32px;
+    padding: 4px 16px;
+    justify-content: space-between;
+    align-items: center;
+    border-radius: 8px;
+}
+.listBoard {
+  display: flex;
+  justify-content: end;
+}
 @media (max-width: 320px) {
   .titleBoard {
     font-size: 47px !important;
