--- a/styles/loginpage.css
+++ b/styles/loginpage.css
@@ -250,6 +250,7 @@ body {
 }
 
 .input-field {
+  font-family: "Inter", sans-serif;
   width: 380px;
   height: 32px;
   font-size: 20px;
@@ -409,7 +410,7 @@ body {
   position: absolute;
   top: 300px;
   left: 96px;
-  font-family: Poppins;
+  font-family: "Inter", sans-serif;
   font-size: 12px;
   font-weight: 400;
   color: rgba(255, 129, 144, 1);
@@ -419,7 +420,7 @@ body {
   position: absolute;
   top: 440px;
   left: 70px;
-  font-family: Poppins;
+  font-family: "Inter", sans-serif;
   font-size: 12px;
   font-weight: 400;
   color: rgba(255, 129, 144, 1);
