--- a/styles/add_tasks.css
+++ b/styles/add_tasks.css
@@ -177,17 +177,6 @@ textarea::placeholder { /*changes the colour of the placeholder text in the text
     color: #D1D1D1;
 }
 
-.descriptionFieldRequired{
-    display: none;
-    width: 438px;
-    height: 12px;
-    font-family: "Poppins", sans-serif;
-    font-weight: 400;
-    font-size: 12px;
-    line-height: 14.4px;
-    color: #FF8190;
-}
-
 .asignedTo_v1{
     display: flex;
     width: 440px;
@@ -298,6 +287,7 @@ display: block; /* Show the hover image when the container is being hovered */
 
 
 .contactAvatar{
+    margin-top: 4px;
     display: flex;
     height: 100px;
     width:440px;
@@ -528,6 +518,16 @@ input[type="date"]::-webkit-calendar-picker-indicator {
     height: 14.51px;
 }
 
+.categoryFieldRequired{
+    display: none;
+    width: 438px;
+    height: 12px;
+    font-family: "Poppins", sans-serif;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 14.4px;
+    color: #FF8190;
+}
 
 .TechnicalTask{
     padding: 4px 24px;
@@ -559,6 +559,26 @@ input[type="date"]::-webkit-calendar-picker-indicator {
     line-height: 24px;
 }
 
+.categoryFrame_74{
+    z-index: 6;
+    cursor: pointer;
+    display: flex;
+    padding: 12px 16px;
+    justify-content: space-between;
+    position: relative;
+    border-radius: 10px;
+    border: 1px solid var(--Style, #D1D1D1);
+    background: var(--white, #FFF);
+    color: var(--black, #000);
+    font-family: "Inter", sans-serif;
+    font-size: 20px;
+    font-weight: 400;
+    line-height: 24px;
+    outline: none;   
+    width: 410px;  
+    margin-top: 8px;
+}
+
 .categoryFrame74{
     z-index: 6;
     cursor: pointer;
@@ -577,6 +597,12 @@ input[type="date"]::-webkit-calendar-picker-indicator {
     outline: none;   
     width: 410px;  
     margin-top: 8px;
+}
+
+.taskCategory{ 
+    display: flex;   
+    width: 410px;  
+    justify-content: space-between;
 }
 
 .categoryFrame74:hover{
