--- a/styles/board.css
+++ b/styles/board.css
@@ -617,7 +617,9 @@ align-items: center;
   margin-top: 40px;
 }
 
-
+.contactAvatarEdit {
+  display: flex;
+}
 @media (max-width: 320px) {
   .titleBoard {
     font-size: 47px !important;
