--- a/styles/board.css
+++ b/styles/board.css
@@ -339,6 +339,17 @@ align-items: center;
   transform: translateX(400%);
   transition: 550ms ease-in-out;
 }
+.openAddWindow{
+  position: fixed;
+  inset: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: hsla(0, 0%, 50%, 0.561);
+  z-index: 999;
+  transform: translateX(0px);
+  transition: 550ms ease-in-out;
+}
 .largeCardA {
   max-height: 75%;
   width: 400px;
@@ -614,12 +625,14 @@ align-items: center;
   justify-content: center;
   align-items: flex-start;
   gap: 24px;
-  margin-top: 40px;
+  margin-top: 80px;
 }
 
 .contactAvatarEdit {
   display: flex;
 }
+
+
 @media (max-width: 320px) {
   .titleBoard {
     font-size: 47px !important;
