--- a/styles/board.css
+++ b/styles/board.css
@@ -292,8 +292,15 @@ align-items: center;
     justify-content: center;
     margin-left: -8px;
 }
+.lastCircel {
+  color: black !important;
+}
+.lastSmallCircel {
+  border: solid 1px black;
+}
 .smallPrio {
   width: 124px;
+  margin-left: -20px;
 }
 .smallProgress {
  color: #000;
